--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "url": "git+https://github.com/InfinityBotList/ibl-autopost.git"
     },
     "author": "TheRealToxicDev",
-    "license": "ISC",
+    "license": "MIT",
     "bugs": {
       "url": "https://github.com/InfinityBotList/ibl-autopost/issues"
     },
