--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ibl-autopost",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "API Wrapper to Automatically Post Stats to the Infinity Bot List API!",
     "main": "dist/index.js",
     "scripts": {
@@ -25,7 +25,7 @@
     },
     "dependencies": {
       "ibl-emitter": "^1.0.1",
-      "infinity-bots": "^1.1.6",
+      "infinity-bots": "latest",
       "typescript": "^4.2.3"
     },
     "types": "./dist/index.d.ts"
