--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 12
       - run: npm install
   publish-gpr:
     needs: build
@@ -21,11 +21,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com
-     scope: "@ibl-autopost"
-       - run: npm install
-       - run: git push --tags && git push
-       - run: npm publish --access public
+          node-version: 12
+          registry-url: https://npm.pkg.github.com/
+          scope: "@infinitybots"
+      - run: npm install
+      - run: git push --tags && git push
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
