--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,4 @@
-github: InfinityBotList
+ko_fi: therealtoxicdev
 patreon: infinitybots
-custom: docs.botlist.site/libraries/ibl-autopost
+github: [InfinityBotList, TheRealToxicDev]
+custom: [api.infinitybotlist.com, api.infinitybotlist.com/docs]
