--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 ko_fi: therealtoxicdev
 patreon: infinitybots
 github: [InfinityBotList, TheRealToxicDev]
-custom: [api.infinitybotlist.com, api.infinitybotlist.com/docs]
+custom: [botlist.site]
